# tauri-wgpu-cam

./: README.md  index.html  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  shader.wgsl  utils.rs  webgpu.rs  yuyv_to_rgba.wgsl
