[package]
name = "beta-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.16", features = ["macos-private-api"] }
nokhwa = { git = "https://github.com/helmerapp/nokhwa", branch = "0.10", features = ["input-native"] }
serde_json = "1.0"
wgpu = "0.20"
rayon = "1.10.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
